# neural_network

./: Cargo.toml
src/: adaptive.rs  base.rs  classic.rs  extract_dataset.rs  hybrid.rs  main.rs
src/only_std/: adaptive.rs  base.rs  classic.rs  extract_dataset.rs  hybrid.rs  mod.rs
src/with_ndarray/: hybrid.rs  mod.rs
